# KubeRAG

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
dashboard/: api_client.py  app.py  components.py
docker/: Dockerfile  Dockerfile.dashboard  docker-compose.yml
eval/: golden_qa.jsonl
scripts/: seed.py
src/kuberag/: api.py  api_models.py  config.py
src/kuberag/eval/: __main__.py  cache.py  compare_chunking.py  golden.py  metrics.py  run.py
src/kuberag/generation/: citations.py  confidence.py  generator.py  models.py  orchestrator.py  prompts.py
src/kuberag/ingest/: __main__.py  chunkers.py  cli.py  dedupe.py  embedder.py  k8s_source.py  loaders.py  pipeline.py
src/kuberag/retrieval/: dense.py  fusion.py  hybrid.py  reranker.py  sparse.py
src/kuberag/stores/: __init__.py  bm25_store.py  chroma_store.py  models.py
tests/: conftest.py
tests/fixtures/docs/: intro.md  networking.md  notes.txt
tests/integration/: test_api_boot.py  test_ask.py  test_bm25_store.py  test_chroma_store.py  test_dense.py  test_documents.py  test_eval_runner.py  test_generator.py  test_health.py  test_hybrid.py  test_ingest_route.py  test_insufficient.py  test_k8s_source.py  test_openapi.py  test_pipeline.py  test_reranker.py  test_sparse.py  test_verifier.py
tests/unit/: test_api_client.py  test_chunkers_fixed.py  test_chunkers_recursive.py  test_citations_parse.py  test_compare_chunking.py  test_components.py  test_confidence.py  test_config.py  test_dedupe.py  test_embedder.py  test_eval_cache.py  test_fixtures.py  test_fusion.py  test_golden.py  test_ingest_cli.py  test_k8s_source.py  test_loaders.py  test_metric_citations.py  test_metric_correctness.py  test_metric_faithfulness.py  test_metric_recall.py  test_prompts.py  test_seed.py
