[project]
name = "kuberag"
version = "0.1.0"
description = "Hybrid-search RAG over Kubernetes documentation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "openai>=1.30",
    "chromadb>=0.5",
    # Pin onnxruntime ≤ 1.23.2 — chromadb pulls it transitively but newer
    # releases dropped the macOS x86_64 wheel.
    "onnxruntime>=1.18,<1.24",
    "rank-bm25>=0.2.2",
    "langchain-text-splitters>=0.0.2",
    "beautifulsoup4>=4.12",
    "pypdf>=4.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "numpy>=1.26",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.32",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
    "types-beautifulsoup4>=4.12",
    "fpdf2>=2.7",  # PDF fixture generation in tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kuberag"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "dashboard"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
disable_error_code = ["import-untyped"]
files = ["src/kuberag"]

[[tool.mypy.overrides]]
module = ["chromadb.*", "rank_bm25.*", "langchain_text_splitters.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that touch the filesystem or local services",
    "network: tests that hit the public internet (slow; opt in with -m network)",
    "eval: tests that hit live LLM APIs (run manually, not in CI)",
]
